# storefront-agent

./: .gitignore  .pre-commit-config.yaml  CHAT_MFE_INTEGRATION.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.api  ENVIRONMENT_CONFIG.md  Makefile  PROJECT_SUMMARY.md  README.md  activate.sh  docker-compose.api.yml  docker-compose.override.yml  docker-compose.production.api.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  env.development  env.production  env.staging  env_example.txt  main.py  pyproject.toml  requirements.txt  run_api.py  setup.py
.github/workflows/: ci.yml
docs/: README.md
examples/: example_usage.py
src/: __init__.py
src/storefront_agent/: __about__.py  __init__.py  azure_llm_client.py  cli.py  config.py  environments.py  http_mcp_client.py  mcp_client.py  mcp_router.py  storefront_agent.py  utils.py  web_api.py
tests/: __init__.py  conftest.py  test_installation.py  test_storefront_agent.py
